Revert "fix columns align on tables with scroll"
This reverts commit 8e6af4605d5841cf6f94de92e857b5ae54bf68ad.

--- a/frontend/src/app/components/shared/data-table/data-table.less
+++ b/frontend/src/app/components/shared/data-table/data-table.less
@@ -101,8 +101,4 @@ data-table {
         overflow-x: hidden;
         line-height: 1.5;
     }
-
-    .shrinked {
-        padding-right: 6px;
-    }
 }
